dnl -*- mode: m4 -*- 
dnl
dnl $Id: configure.in,v 1.2 2007/11/01 22:53:33 hagel Exp $
dnl 

AC_INIT(Nucleus.cpp)

AC_PREFIX_DEFAULT(${HOME})

dnl Change to run date Month/Day/Year
AM_INIT_AUTOMAKE(Gemini, 4.0.0)          

dnl AC_CHECK_LIB(ebetra,srim_init,,[AC_MSG_WARN([Couldn't find srim_init in libebetra library, you will need it to use some of the classes provided by lib073106.])])

AC_PROG_CXX                                 
AC_DISABLE_STATIC                           
AM_PROG_LIBTOOL                             
ROOT_PATH
dnl CYC_PATH(2.3.0)
dnl CYC_DEBUG 
dnl CYC_OPTIMIZE 
dnl Make Makefiles
AC_OUTPUT(Makefile)
